--- a/static/static_dirs/css/creative.css
+++ b/static/static_dirs/css/creative.css
@@ -148,12 +148,12 @@ header {
   height: auto;
   margin: 0 auto;
   box-shadow: 0 0 50px rgba(0, 0, 0, 0.8);
-  padding: 100px 0;
+  padding: 100px 15px 100px;
 }
 header .header-content {
   position: relative;
   text-align: center;
-  padding: 100px 15px 100px;
+  padding: 0px 15px 100px;
   width: 100%;
 }
 header .header-content .header-content-inner h1,
@@ -460,8 +460,11 @@ body {
   text-align: left;
 }
 .parallax {
-  background: url("../img/aboutbg1.png") no-repeat;
-
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  background-size: cover;
+  -o-background-size: cover;
+  background-image: url("../img/aboutbg1.png");
 }
 .errorlist {
   text-align: left;
