--- a/templates/header.html
+++ b/templates/header.html
@@ -9,9 +9,9 @@
         <div class="header-content" >
             <div class="header-content-inner">
 
-               <img src="{% static 'img/logo.png'%}" class="img-responsive center-block wow bounceIn" alt=""/>
+               <img src="{% static 'img/logo.png'%}" class="img-responsive center-block headlogo" alt=""/>
                 <hr>
-                <p>Start Bootstrap can help you build better websites using the Bootstrap CSS framework! Just download your template and start going, no strings attached!</p>
+                <p class="tittle_head">Start Bootstrap can help you build better websites using the Bootstrap CSS framework! Just download your template and start going, no strings attached!</p>
 
                         {% if success %}<p class="bg-success">Thank you! We will send password to you soon..</p>{% endif %}
                     {% if not request.user.is_authenticated %}
@@ -40,7 +40,7 @@
 
 
                         {% else %}
-                       <div class="col-md-12"><h4 style="display:block; margin-bottom: 10px">Hello {{ request.user.username }}!</h4>
+                       <div class="col-md-12"><h4 style="display:block; margin-bottom: 10px">Hello {{ request.user.firstname }}!</h4>
 
                            <div class="btn-group dropup">
   <button type="button" class="btn btn-xl btn-primary " data-toggle="dropdown" aria-expanded="false">Select your grade level</button>
