--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -28,11 +28,11 @@
         <div class="col-md-3">
             <div class="lang center-block" style="text-align: center">
                 <a class="btn btn-default {% if current_language == 1 %}active{% endif %}" href="?language=1&grade={{ grade }}">English</a>
-                <a class="btn btn-default {% if current_language == 2 %}active{% endif %}" href="?language=2&grade={{ grade }}">French</a>
+                <a class="btn btn-default {% if current_language == 2 %}active{% endif %}" href="?language=2&grade={{ grade }}">Francais</a>
             </div>
         </div>
     <div class="col-md-3 col-md-offset-6">
-  <a href="../#page-top" type="button" class="btn btn-xl btn-primary " aria-expanded="false"><i class="fa fa-arrow-left fa-1x"></i>  Back for select grade level</a>
+  <a href="../#page-top" type="button" class="btn btn-xl btn-primary " aria-expanded="false"><i class="fa fa-arrow-left fa-1x"></i> Change grade level</a>
 </div>
 
     </div>
