--- a/templates/scripts.html
+++ b/templates/scripts.html
@@ -34,3 +34,9 @@
 
 <script type="text/javascript" src="{% static 'js/init.js' %}"></script>
 
+<script>
+    $(function () {
+  $('[data-toggle="popover"]').popover()
+})
+</script>
+
