--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,7 @@
    {% block head %}{% endblock %}
 </head>
 
-<body id="page-top">
+<body id="page-top" onunload="logout()">
 
 <!-- nav -->
 {% block nav %}{% endblock %}
