--- a/templates/contact.html
+++ b/templates/contact.html
@@ -14,7 +14,7 @@
                 </div>
                 <div class="col-lg-4 text-center">
                     <i class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"></i>
-                    <p><a href="mailto:your-email@your-domain.com">josh@kidsintoaction.com</a></p>
+                    <p><a href="mailto:josh@kidsintoaction.com">josh@kidsintoaction.com</a></p>
 
                 </div>
 
